--- a/src/components/Header/styles/header.sass
+++ b/src/components/Header/styles/header.sass
@@ -4,3 +4,15 @@ body
 
     header
         flex-direction: column
+
+        .upper-content
+            width: 100%
+            height: auto
+            display: flex
+            justify-content: space-between
+            align-items: center
+            margin-top: $m32mob
+
+            .logo
+                width: clamp(66.5px,31.074119999999997vw,266px)
+                height: clamp(13.5px,6.30828vw,54px)
