--- a/src/components/Header/styles/header.css
+++ b/src/components/Header/styles/header.css
@@ -1,4 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 body header {
   flex-direction: column;
+}
+body header .upper-content {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: clamp(16px, 7.47648vw, 64px);
+}
+body header .upper-content .logo {
+  width: clamp(66.5px, 31.07412vw, 266px);
+  height: clamp(13.5px, 6.30828vw, 54px);
 }/*# sourceMappingURL=header.css.map */
