--- a/src/styles/global/global.sass
+++ b/src/styles/global/global.sass
@@ -36,6 +36,7 @@
         .container
             width: 90%
             height: auto
+            margin: auto
             display: flex
             flex-direction: column
 
