--- a/src/components/Header/SearchBar/styles/search_bar.sass
+++ b/src/components/Header/SearchBar/styles/search_bar.sass
@@ -1,1 +1,37 @@
 @import "../../../../styles/variables/variables"
+
+.search-bar
+    width: 100%
+    height: clamp(27px,12.61656vw,108px)
+    display: flex
+    justify-content: space-between
+    align-items: center
+    border-radius: 4px
+    border: 1px solid $light_text
+    background: $white
+    margin-top: $m32mob
+
+    .search-bar-input
+        width: 55.93607305936073%
+        height: 100%
+        color: $light_text
+        font-feature-settings: 'clig' off, 'liga' off
+        font-family: Lato
+        font-size: $font14mob
+        font-style: normal
+        font-weight: 400
+        line-height: 142.857%
+        border: none
+        padding-left: $m16mob
+
+    .select-list
+        width: auto
+        height: auto
+        color: $primary_gray
+        font-feature-settings: 'clig' off, 'liga' off
+        font-family: Lato
+        font-size: $font14mob
+        font-style: normal
+        font-weight: 400
+        line-height: 142.857%
+        border: none
