--- a/src/components/Header/styles/header.sass
+++ b/src/components/Header/styles/header.sass
@@ -16,3 +16,8 @@ body
             .logo
                 width: clamp(66.5px,31.074119999999997vw,266px)
                 height: clamp(13.5px,6.30828vw,54px)
+
+        .lower-content
+            width: 100%
+            display: flex
+            align-items: center
