--- a/src/styles/variables/variables.sass
+++ b/src/styles/variables/variables.sass
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap')
 
 // Colors:
+$spotlight_red: #BF2E3B
+$spotlight_blue: #0186C4
 $discount: #FF2E00
 $selected: #FF7A00
 $star: #FFC000
