--- a/src/styles/global/global.css
+++ b/src/styles/global/global.css
@@ -49,6 +49,42 @@
   flex-direction: column;
   margin-top: clamp(24px, 11.21472vw, 96px);
 }
+* body .heading-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+* body .view-btn {
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+}
+* body .view {
+  color: #262626;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: clamp(6px, 2.80368vw, 24px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 166.667%;
+  margin-right: clamp(4px, 1.86912vw, 16px);
+}
+* body .chevron-icon {
+  font-size: clamp(6px, 2.80368vw, 24px);
+}
+* body .section-heading {
+  color: black;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: clamp(10px, 4.6728vw, 40px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+}
 * body .category-heading {
   color: white;
   font-feature-settings: "clig" off, "liga" off;
