--- a/src/styles/global/global.sass
+++ b/src/styles/global/global.sass
@@ -50,6 +50,42 @@
             flex-direction: column
             margin-top: clamp(24px,11.21472vw,96px)
 
+        .heading-container
+            width: 100%
+            height: auto
+            display: flex
+            justify-content: space-between
+            align-items: center
+
+        .view-btn
+            display: flex
+            align-items: center
+            background-color: transparent
+            cursor: pointer
+            border: none
+
+        .view
+            color: $primary_gray
+            font-feature-settings: 'clig' off, 'liga' off
+            font-family: Lato
+            font-size: $font12mob
+            font-style: normal
+            font-weight: 400
+            line-height: 166.667%
+            margin-right: $m8mob
+
+        .chevron-icon
+            font-size: $font12mob
+
+        .section-heading
+            color: $black
+            font-feature-settings: 'clig' off, 'liga' off
+            font-family: Lato
+            font-size: $font20mob
+            font-style: normal
+            font-weight: 500
+            line-height: 100%
+
         .category-heading
             color: $white
             font-feature-settings: 'clig' off, 'liga' off
