--- a/src/components/ProductsList/ProductCard/styles/product_card.css
+++ b/src/components/ProductsList/ProductCard/styles/product_card.css
@@ -1,1 +1,113 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");/*# sourceMappingURL=product_card.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+.product-card {
+  width: clamp(100px, 46.728vw, 400px);
+  height: auto;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
+}
+.product-card .deal {
+  color: #9D9D9D;
+  text-align: center;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 800;
+  line-height: 142.857%;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  margin-bottom: clamp(8px, 3.73824vw, 32px);
+}
+.product-card .product-image {
+  width: clamp(85px, 39.7188vw, 340px);
+  height: clamp(85px, 39.7188vw, 340px);
+}
+.product-card .product-card-content {
+  width: 90%;
+  height: auto;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.product-card .product-card-content .product-name {
+  color: #434343;
+  font-family: Lato;
+  font-size: clamp(8px, 3.73824vw, 32px);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 156.25%;
+  margin-top: clamp(8px, 3.73824vw, 32px);
+}
+.product-card .product-card-content .description {
+  color: #555555;
+  font-family: Lato;
+  font-size: clamp(6px, 2.80368vw, 24px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 208.333%;
+}
+.product-card .product-card-content .rating-container {
+  display: flex;
+  align-items: center;
+}
+.product-card .product-card-content .rating-container .rating {
+  color: #FFC000;
+  font-size: clamp(5px, 2.3364vw, 20px);
+}
+.product-card .product-card-content .rating-container .rating-quantity {
+  color: #555555;
+  text-align: center;
+  font-family: Lato;
+  font-size: clamp(6px, 2.80368vw, 24px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 208.333%;
+  margin-left: clamp(4px, 1.86912vw, 16px);
+}
+.product-card .product-card-content .price-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: clamp(6px, 2.80368vw, 24px);
+}
+.product-card .product-card-content .price-container .current-price {
+  color: #FF2E00;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 142.857%;
+}
+.product-card .product-card-content .price-container .original-price {
+  color: #555555;
+  font-family: Lato;
+  font-size: clamp(6px, 2.80368vw, 24px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 166.667%;
+  text-decoration-line: strikethrough;
+}
+.product-card .product-card-content .price-container .discount {
+  width: clamp(16.5px, 7.71012vw, 66px);
+  height: auto;
+  background-color: #FF2E00;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2.057px;
+}
+.product-card .product-card-content .price-container .discount .percentage {
+  color: white;
+  font-family: Inter;
+  font-size: clamp(4px, 1.86912vw, 16px);
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding: clamp(2px, 0.93456vw, 8px);
+}/*# sourceMappingURL=product_card.css.map */
