--- a/src/components/TrendingList/TrendingCard/styles/trending_card.sass
+++ b/src/components/TrendingList/TrendingCard/styles/trending_card.sass
@@ -1,1 +1,122 @@
 @import "../../../../styles/variables/variables"
+
+.trending-card
+    position: relative
+    width: clamp(178.5px,83.40948vw,714px)
+    height: auto
+    display: flex
+    flex-direction: column
+    border-radius: 10px
+
+    .label
+        position: absolute
+        top: clamp(5px,2.3364vw,20px)
+        left: clamp(5px,2.3364vw,20px)
+        width: clamp(45px,21.0276vw,180px)
+        height: auto
+        background-color: $notification
+        display: flex
+        align-items: center
+        justify-content: center
+        border-radius: 4px
+
+        .label-content
+            width: 85.88235294117646%
+            height: auto
+            display: flex
+            justify-content: space-between
+            align-items: center
+            margin-top: clamp(2px,0.93456vw,8px)
+            margin-bottom: clamp(2px,0.93456vw,8px)
+
+            .dolly-icon
+                color: $white
+                font-size: $font16mob
+                margin-left: 4px
+
+            .label-text
+                color: $white
+                font-feature-settings: 'clig' off, 'liga' off
+                font-family: Lato
+                font-size: $font10mob
+                font-style: normal
+                font-weight: 400
+                line-height: 200%
+
+    .card-image
+        width: 100%
+        height: clamp(211.5px,98.82972vw,846px)
+        border-top-left-radius: 10px
+        border-top-right-radius: 10px
+
+    .card-lower-container
+        width: 100%
+        height: auto
+        display: flex
+        justify-content: center
+        background-color: $primary_gray
+        border-bottom-left-radius: 10px
+        border-bottom-right-radius: 10px
+
+        .lower-content
+            width: 90%
+            height: auto
+            display: flex
+            align-items: center
+            justify-content: space-between
+            margin-top: $m16mob
+            margin-bottom: $m16mob
+
+            .title-description
+                display: flex
+                flex-direction: column
+                align-items: flex-start
+
+                .title
+                    color: $white
+                    font-family: Lato
+                    font-size: clamp(7px,3.2709599999999996vw,28px)
+                    font-style: normal
+                    font-weight: 700
+                    line-height: 178.571%
+
+                .description
+                    color: $gray
+                    font-family: Lato
+                    font-size: clamp(7px,3.2709599999999996vw,28px)
+                    font-style: normal
+                    font-weight: 400
+                    line-height: 142.857%
+
+            .shop-btn
+                width: clamp(73px,34.111439999999995vw,292px)
+                height: clamp(22px,10.280159999999999vw,88px)
+                display: flex
+                align-items: center
+                justify-content: center
+                border: 2px solid $white
+                border-radius: 8px
+                background-color: transparent
+
+                .btn-content
+                    display: flex
+                    align-items: center
+                    justify-content: center
+
+                    .price
+                        color: $white
+                        font-family: Lato
+                        font-size: clamp(7px,3.2709599999999996vw,28px)
+                        font-style: normal
+                        font-weight: 700
+                        line-height: 142.857%
+
+                    .text
+                        color: #FFF
+                        text-align: right
+                        font-family: Lato
+                        font-size: clamp(7px,3.2709599999999996vw,28px)
+                        font-style: normal
+                        font-weight: 600
+                        line-height: 142.857%
+                        margin-left: $m8mob
