--- a/src/components/TrendingList/styles/trending_list.css
+++ b/src/components/TrendingList/styles/trending_list.css
@@ -5,4 +5,14 @@
   display: flex;
   flex-direction: column;
   margin-top: clamp(24px, 11.21472vw, 96px);
+}
+.trending-list .trending-swiper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-top: clamp(12px, 5.60736vw, 48px);
+}
+.trending-list .trending-swiper .swiper-wrapper {
+  display: flex;
+  flex-direction: row;
 }/*# sourceMappingURL=trending_list.css.map */
