--- a/src/components/TrendingList/styles/trending_list.sass
+++ b/src/components/TrendingList/styles/trending_list.sass
@@ -6,3 +6,13 @@
     display: flex
     flex-direction: column
     margin-top: clamp(24px,11.21472vw,96px)
+
+    .trending-swiper
+        width: 100%
+        display: flex
+        align-items: center
+        margin-top: clamp(12px,5.60736vw,48px)
+
+        .swiper-wrapper
+            display: flex
+            flex-direction: row
