--- a/src/components/ProductsList/ProductCard/styles/product_card.css
+++ b/src/components/ProductsList/ProductCard/styles/product_card.css
@@ -91,6 +91,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 166.667%;
+  text-decoration: line-through;
   text-decoration-line: strikethrough;
 }
 .product-card .product-card-content .price-container .discount {
