--- a/src/components/Footer/styles/footer.sass
+++ b/src/components/Footer/styles/footer.sass
@@ -13,6 +13,21 @@
         flex-direction: column
         margin: auto
 
+    .logotypes
+        width: 100%
+        background-color: $white
+        display: flex
+        align-items: center
+        justify-content: center
+
+        .content-container
+            width: 47.07112970711297%
+            display: flex
+            align-items: center
+            justify-content: space-between
+            margin-top: $m16mob
+            margin-bottom: $m32mob
+
     .row
         width: 100%
         height: auto
