--- a/src/components/ProductsList/ProductCard/styles/product_card.sass
+++ b/src/components/ProductsList/ProductCard/styles/product_card.sass
@@ -92,6 +92,7 @@
                 font-style: normal
                 font-weight: 400
                 line-height: 166.667%
+                text-decoration: line-through
                 text-decoration-line: strikethrough
 
             .discount
