--- a/src/components/TopList/styles/top_list.sass
+++ b/src/components/TopList/styles/top_list.sass
@@ -14,3 +14,7 @@
         flex-direction: row
         align-items: center
         margin-top: clamp(12px,5.60736vw,48px)
+
+        .swiper-wrapper
+            display: flex
+            flex-direction: row
