--- a/src/components/TrendingList/TrendingCard/styles/trending_card.sass
+++ b/src/components/TrendingList/TrendingCard/styles/trending_card.sass
@@ -97,6 +97,14 @@
                 border: 2px solid $white
                 border-radius: 8px
                 background-color: transparent
+                transition: 0.3s all
+                &:hover
+                    background-color: $white
+
+                    .btn-content
+
+                        .price, .text
+                            color: $primary_gray
 
                 .btn-content
                     display: flex
