--- a/src/pages/Registration/styles/registration.css
+++ b/src/pages/Registration/styles/registration.css
@@ -1,1 +1,138 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");/*# sourceMappingURL=registration.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+.screen .container .main-content .form {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  margin-top: clamp(16px, 7.47648vw, 64px);
+}
+.screen .container .main-content .form .email-input-container, .screen .container .main-content .form .password-input-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+.screen .container .main-content .form .email-input-container .label, .screen .container .main-content .form .password-input-container .label {
+  color: #262626;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.screen .container .main-content .form .email-input-container .label .required, .screen .container .main-content .form .password-input-container .label .required {
+  color: #BF2E3B;
+}
+.screen .container .main-content .form .email-input-container .email-input, .screen .container .main-content .form .email-input-container .password-input, .screen .container .main-content .form .password-input-container .email-input, .screen .container .main-content .form .password-input-container .password-input {
+  width: 100%;
+  height: clamp(20px, 9.3456vw, 80px);
+  padding-left: clamp(5px, 2.3364vw, 20px);
+  border: 1px solid #C4C4C4;
+  border-radius: 4px;
+  margin-top: clamp(4px, 1.86912vw, 16px);
+}
+.screen .container .main-content .form .email-input-container .email-input:focus, .screen .container .main-content .form .email-input-container .password-input:focus, .screen .container .main-content .form .password-input-container .email-input:focus, .screen .container .main-content .form .password-input-container .password-input:focus {
+  outline: none;
+  border: 1px solid #262626;
+}
+.screen .container .main-content .form .email-input-container .email-input-error, .screen .container .main-content .form .email-input-container .password-input-error, .screen .container .main-content .form .password-input-container .email-input-error, .screen .container .main-content .form .password-input-container .password-input-error {
+  width: 100%;
+  height: clamp(20px, 9.3456vw, 80px);
+  padding-left: clamp(5px, 2.3364vw, 20px);
+  border: 1px solid #FF2E00;
+  border-radius: 4px;
+  margin-top: clamp(4px, 1.86912vw, 16px);
+}
+.screen .container .main-content .form .email-input-container .email-input-error:focus, .screen .container .main-content .form .email-input-container .password-input-error:focus, .screen .container .main-content .form .password-input-container .email-input-error:focus, .screen .container .main-content .form .password-input-container .password-input-error:focus {
+  outline: none;
+  border: 1px solid #262626;
+}
+.screen .container .main-content .form .email-input-container .error, .screen .container .main-content .form .password-input-container .error {
+  color: #FF2E00;
+  font-family: Lato;
+  font-size: clamp(6px, 2.80368vw, 24px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 83.333%;
+  margin-top: clamp(4px, 1.86912vw, 16px);
+}
+.screen .container .main-content .form .password-input-container {
+  margin-top: clamp(16px, 7.47648vw, 64px);
+}
+.screen .container .main-content .form .lower-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: clamp(16px, 7.47648vw, 64px);
+}
+.screen .container .main-content .form .lower-container .checkbox-container {
+  display: flex;
+  align-items: center;
+}
+.screen .container .main-content .form .lower-container .checkbox-container .checkbox {
+  width: clamp(10px, 4.6728vw, 40px);
+  height: clamp(10px, 4.6728vw, 40px);
+}
+.screen .container .main-content .form .lower-container .checkbox-container .checkbox-label {
+  color: #262626;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: clamp(4px, 1.86912vw, 16px);
+}
+.screen .container .main-content .form .lower-container .password-link {
+  color: #4172DC;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration-line: underline;
+}
+.screen .container .main-content .form .form-button {
+  width: 100%;
+  height: 56px;
+  color: white;
+  text-align: center;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: clamp(8px, 3.73824vw, 32px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142.857%;
+  text-transform: uppercase;
+  background-color: #C4C4C4;
+  border: none;
+  border-radius: 4px;
+  margin-top: clamp(16px, 7.47648vw, 64px);
+  transition: 0.3s all;
+}
+.screen .container .main-content .form .form-button:hover {
+  background-color: #4172DC;
+}
+.screen .container .main-content .form .divider-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: clamp(8px, 3.73824vw, 32px);
+  margin-bottom: clamp(8px, 3.73824vw, 32px);
+}
+.screen .container .main-content .form .divider-container .divider {
+  width: 42%;
+  height: 1px;
+  background-color: #9D9D9D;
+}
+.screen .container .main-content .form .divider-container .text {
+  color: #9D9D9D;
+  text-align: center;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+}/*# sourceMappingURL=registration.css.map */
