--- a/src/pages/Registration/styles/registration.sass
+++ b/src/pages/Registration/styles/registration.sass
@@ -101,7 +101,7 @@
 
                 .form-button
                     width: 100%
-                    height: 56px
+                    height: clamp(28px,13.083839999999999vw,112px)
                     color: $white
                     text-align: center
                     font-feature-settings: 'clig' off, 'liga' off
@@ -117,7 +117,27 @@
                     margin-top: $m32mob
                     transition: 0.3s all
                     &:hover
-                        background-color: $button_blue
+                        background-color: $gray_dark
+
+                .form-button-active
+                    width: 100%
+                    height: clamp(28px,13.083839999999999vw,112px)
+                    color: $white
+                    text-align: center
+                    font-feature-settings: 'clig' off, 'liga' off
+                    font-family: Lato
+                    font-size: $font16mob
+                    font-style: normal
+                    font-weight: 500
+                    line-height: 142.857%
+                    text-transform: uppercase
+                    background-color: $button_blue
+                    border: none
+                    border-radius: 4px
+                    margin-top: $m32mob
+                    transition: 0.3s all
+                    &:hover
+                        background-color: #265BCF
 
                 .divider-container
                     width: 100%
@@ -126,7 +146,6 @@
                     justify-content: space-between
                     align-items: center
                     margin-top: $m16mob
-                    margin-bottom: $m16mob
 
                     .divider
                         width: 42%
@@ -141,3 +160,52 @@
                         font-size: 14px
                         font-style: normal
                         font-weight: 500
+
+                .google-button
+                    width: 100%
+                    height: clamp(28px,13.083839999999999vw,112px)
+                    color: $white
+                    text-align: center
+                    font-feature-settings: 'clig' off, 'liga' off
+                    font-family: Lato
+                    font-size: $font16mob
+                    font-style: normal
+                    font-weight: 500
+                    line-height: 142.857%
+                    background-color: $gray_dark
+                    display: flex
+                    align-items: center
+                    justify-content: center
+                    border: none
+                    border-radius: 4px
+                    margin-top: $m16mob
+                    transition: 0.3s all
+                    &:hover
+                        background-color: $button_blue
+
+                    .google-icon
+                        margin-right: $m8mob
+
+                .text-container
+                    width: 100%
+                    height: auto
+                    text-align: center
+                    margin-top: $m32mob
+
+                    .link-text
+                        color: $primary_gray
+                        font-feature-settings: 'clig' off, 'liga' off
+                        font-family: Lato
+                        font-size: $font14mob
+                        font-style: normal
+                        font-weight: 500
+                        line-height: 142.857%
+
+                        .sign-up-link
+                            color: $selected
+                            font-size: $font14mob
+                            font-style: normal
+                            font-weight: 900
+                            line-height: 142.857%
+                            text-decoration: none
+                            margin-left: clamp(2px,0.93456vw,8px)
