--- a/src/pages/Login/styles/login.sass
+++ b/src/pages/Login/styles/login.sass
@@ -15,7 +15,7 @@
                 flex-direction: column
                 margin-top: $m32mob
 
-                .email-input-container, .password-input-container, .name-input-container
+                .email-input-container, .password-input-container
                     width: 100%
                     height: auto
                     display: flex
@@ -32,7 +32,7 @@
                         .required
                             color: $spotlight_red
 
-                    .email-input, .password-input, .name-input
+                    .email-input, .password-input
                         width: 100%
                         height: clamp(20px,9.3456vw,80px)
                         padding-left: clamp(5px,2.3364vw,20px)
@@ -43,7 +43,7 @@
                             outline: none
                             border: 1px solid $primary_gray
 
-                    .email-input-error, .password-input-error, .name-input-error
+                    .email-input-error, .password-input-error
                         width: 100%
                         height: clamp(20px,9.3456vw,80px)
                         padding-left: clamp(5px,2.3364vw,20px)
@@ -63,16 +63,12 @@
                         line-height: 83.333%
                         margin-top: $m8mob
 
-                .email-input-container
-                    margin-top: $m32mob
-
                 .password-input-container
                     margin-top: $m32mob
 
                 .lower-container
                     width: 100%
                     display: flex
-                    flex-direction: column
                     justify-content: space-between
                     align-items: center
                     margin-top: $m32mob
@@ -86,7 +82,6 @@
                             height: clamp(10px,4.6728vw,40px)
 
                         .checkbox-label
-                            width: 100%
                             color: $primary_gray
                             font-family: Lato
                             font-size: $font14mob
@@ -95,25 +90,14 @@
                             line-height: normal
                             margin-left: $m8mob
 
-                        .checkbox-label-error
-                            width: 100%
-                            color: #FF2E00
-                            font-family: Lato
-                            font-size: $font14mob
-                            font-style: normal
-                            font-weight: 400
-                            line-height: normal
-                            margin-left: $m8mob
-
-                    .checkbox-error
-                        width: 100%
-                        color: #FF2E00
+                    .password-link
+                        color: $button_blue
                         font-family: Lato
-                        font-size: $font12mob
+                        font-size: $font14mob
                         font-style: normal
                         font-weight: 400
-                        line-height: 83.333%
-                        margin-top: $m8mob
+                        line-height: normal
+                        text-decoration-line: underline
 
                 .form-button
                     width: 100%
